--- a/EZEE SHOP/index.html
+++ b/EZEE SHOP/index.html
@@ -17,19 +17,19 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="EZEE SHOP\IMAGES\EZEE SHOP LOGO.png" width="125px">
+                <img src="IMAGES\EZEE SHOP LOGO.png" width="125px">
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="EZEE SHOP\index.html" target="_blank">Home</a></li>
-                    <li><a href="EZEE SHOP\Products.html" target="_blank">Product</a></li>
-                    <li><a href="EZEE SHOP\about_us.html" target="_blank">About Us</a></li>
-                    <li><a href="EZEE SHOP\contact.html" target="_blank">Contact</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
+                    <li><a href="Products.html" target="_blank">Product</a></li>
+                    <li><a href="about_us.html" target="_blank">About Us</a></li>
+                    <li><a href="contact.html" target="_blank">Contact</a></li>
                     <li><a href="#">Account</a></li>
                 </ul>
             </nav>
-            <img src="EZEE SHOP\IMAGES\shopping-cart-svg-png-icon-download-28.png" width="25px" height="25px">
-            <img src="EZEE SHOP\IMAGES\menu icon.png" width="25px" height="25px" class="menu-icon" 
+            <img src="IMAGES\shopping-cart-svg-png-icon-download-28.png" width="25px" height="25px">
+            <img src="IMAGES\menu icon.png" width="25px" height="25px" class="menu-icon" 
             onclick="menutoggle()">
             </div>
         <div class="row">
@@ -37,10 +37,10 @@
                <h1>Give Your Shopping <br>A New Prospective! </h1>
                <p>You can't buy happiness with money, but it can get you awesome products<br>The more you shop, the happier you are.
                </p>
-               <a href="EZEE SHOP\Products.html" target="_blank" class="btn">Explore Now &#10170;</a>
+               <a href="Products.html" target="_blank" class="btn">Explore Now &#10170;</a>
             </div>
             <div class="col-2">
-                <img src="EZEE SHOP\IMAGES\BG photo.png">
+                <img src="IMAGES\BG photo.png">
             </div>
         </div>
     </div>
@@ -52,14 +52,14 @@
     <div class="small container">
         <div class="row">
         <div class="col-3">
-            <img src="EZEE SHOP\IMAGES\Fashion\adidas tracksuit for women.jpg" height="400">
+            <img src="IMAGES\Fashion\adidas tracksuit for women.jpg" height="400">
         </div>
         <div class="col-3">
-            <img src="EZEE SHOP\IMAGES\Fashion\ADIDAS adizero 6m.jpg" height="400">
+            <img src="IMAGES\Fashion\ADIDAS adizero 6m.jpg" height="400">
 
         </div>
         <div class="col-3">
-            <img src="EZEE SHOP\IMAGES\Electronics\APPLE 2020 Macbook Air M1.jpg" height="400" width="400">
+            <img src="IMAGES\Electronics\APPLE 2020 Macbook Air M1.jpg" height="400" width="400">
 
         </div>
     </div>
@@ -70,10 +70,10 @@
     <h2 class="title">Featured Products</h2>
     <div class="row">
         <div class="col-4">
-            <a href="EZEE SHOP\product_details.html" target="_blank">
-                <img src="EZEE SHOP\IMAGES\Fashion\Peter England blazer2.jpg">
+            <a href="product_details.html" target="_blank">
+                <img src="IMAGES\Fashion\Peter England blazer2.jpg">
             </a>
-            <h4><a href="EZEE SHOP\product_details.html" target="_blank"> Philippe<br>
+            <h4><a href="product_details.html" target="_blank"> Philippe<br>
                 Men Blue Solid Slim-Fit Formal Blazer</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -85,10 +85,10 @@
                 <p>MRP ₹6999</p>
         </div>
         <div class="col-4">
-            <a href="EZEE SHOP\project_details1.html" target="_blank">
-                <img src="EZEE SHOP\IMAGES\Fashion\Blend Banarasi Saree.jpg">
+            <a href="project_details1.html" target="_blank">
+                <img src="IMAGES\Fashion\Blend Banarasi Saree.jpg">
             </a>
-            <h4><a href="EZEE SHOP\project_details1.html" target="_blank">KALINI<br>
+            <h4><a href="project_details1.html" target="_blank">KALINI<br>
                 Maroon & Gold Zari Silk Blend Banarasi Saree</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -100,10 +100,10 @@
                 <p>MRP ₹2099</p>
         </div>
         <div class="col-4">
-            <a href="EZEE SHOP\product_detailes2.html" target="_blank">
-                <img src="EZEE SHOP\IMAGES\Fashion\adidas sport shoes men1.jpg" height="390">
+            <a href="product_detailes2.html" target="_blank">
+                <img src="IMAGES\Fashion\adidas sport shoes men1.jpg" height="390">
             </a>
-            <h4><a href="EZEE SHOP\product_detailes2.html" target="_blank">ADIDAS <br>
+            <h4><a href="product_detailes2.html" target="_blank">ADIDAS <br>
                 Quickflow M Running Shoes For Men  (Blue)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -116,10 +116,10 @@
         </div>
 
         <div class="col-4">
-            <a href="EZEE SHOP\project_detailes3.html" target="_blank">
-                <img src="EZEE SHOP\IMAGES\Electronics\Apple-iPhone-1.jpg" height="390">
+            <a href="project_detailes3.html" target="_blank">
+                <img src="IMAGES\Electronics\Apple-iPhone-1.jpg" height="390">
             </a>
-            <h4><a href="EZEE SHOP\project_detailes3.html" target="_blank"> <br>
+            <h4><a href="project_detailes3.html" target="_blank"> <br>
                 iPhone 14 Pro Max (Deep Purple, 512 GB)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -138,7 +138,7 @@
     <h2 class="title">Latest Products</h2>
     <div class="row">
         <div class="col-4">
-            <img src="EZEE SHOP\IMAGES\Featured Products\Featured Products.jpg">
+            <img src="IMAGES\Featured Products\Featured Products.jpg">
             <h4>Roadster <br>
                 Men Black Solid Padded Jacket
                 </h4>
@@ -152,7 +152,7 @@
                 <p>MRP ₹1799</p>
         </div>
         <div class="col-4">
-            <img src="EZEE SHOP\IMAGES\Featured Products\Featured Products1.jpg" height="330">
+            <img src="IMAGES\Featured Products\Featured Products1.jpg" height="330">
             <h4>Inddus<br>
                 Women Wine Solid Georgette Saree with Blouse Piece</h4>
                 <div class="rating">
@@ -165,7 +165,7 @@
                 <p>MRP ₹1499</p>
         </div>
         <div class="col-4">
-            <img src="EZEE SHOP\IMAGES\Featured Products\Featured Products6.jpg" height="330">
+            <img src="IMAGES\Featured Products\Featured Products6.jpg" height="330">
             <h4>Wood Craft<br>
                  India Armaan Decorative Intersecting Wall Shelf Set OF 4 -White.</h4>
                 <div class="rating">
@@ -179,7 +179,7 @@
         </div>
 
         <div class="col-4">
-            <img src="EZEE SHOP\IMAGES\Featured Products\Featured Products5.jpg" height="330">
+            <img src="IMAGES\Featured Products\Featured Products5.jpg" height="330">
             <h4>
             PUMA<br> 
             Firefly Walking Shoes For Men  (Black)
@@ -197,7 +197,7 @@
     </div>
     <div class="row">
         <div class="col-4">
-            <img src="EZEE SHOP\IMAGES\Featured Products\Featured Products4.jpg" height="330">
+            <img src="IMAGES\Featured Products\Featured Products4.jpg" height="330">
             <h4>Varanga<br>
                 Women Mustard Yellow Anarkali Kurta With DupattaLouis</h4>
                 <div class="rating">
@@ -210,7 +210,7 @@
                 <p>MRP ₹2049</p>
         </div>
         <div class="col-4">
-            <img src="EZEE SHOP\IMAGES\Featured Products\Featured Products2.jpg" height="340">
+            <img src="IMAGES\Featured Products\Featured Products2.jpg" height="340">
             <h4>Fastrack <br>
                 NG3120SL01C Bare Basic Analog Watch - For Men</h4>
                 <div class="rating">
@@ -223,7 +223,7 @@
                 <p>MRP ₹2049</p>
         </div>
         <div class="col-4">
-            <img src="EZEE SHOP\IMAGES\Featured Products\Featured Products3.jpg" height="340">
+            <img src="IMAGES\Featured Products\Featured Products3.jpg" height="340">
             <h4>Mivi <br>
                 Play 5 W Portable Bluetooth Speaker  (Black, Mono Channel)</h4>
                 <div class="rating">
@@ -237,7 +237,7 @@
         </div>
 
         <div class="col-4">
-            <img src="EZEE SHOP\IMAGES\Featured Products\Featured Products7.jpg" height="340">
+            <img src="IMAGES\Featured Products\Featured Products7.jpg" height="340">
             <h4>DIZO <br>
                 Watch R AMOLED with 45 mm Dial Size (by realme techLife)</h4>
                 <div class="rating">
@@ -260,7 +260,7 @@
     <div class="small-container">
         <div class="row">
             <div class="col-2">
-                <img src="EZEE SHOP\IMAGES\offer on poco f4.png" class="offer-img">
+                <img src="IMAGES\offer on poco f4.png" class="offer-img">
 
             </div>
             <div class="col-2">
@@ -289,7 +289,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-half-o"></i>
                 </div>
-                <img src="EZEE SHOP\IMAGES\Testimony1.png">
+                <img src="IMAGES\Testimony1.png">
                 <h3>Venti</h3>
             </div>
             <div class="col-3">
@@ -302,7 +302,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-half-o"></i>
                 </div>
-                <img src="EZEE SHOP\IMAGES\Testimony2.png">
+                <img src="IMAGES\Testimony2.png">
                 <h3>Steve Smith</h3>
             </div>
             <div class="col-3">
@@ -315,7 +315,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-half-o"></i>
                 </div>
-                <img src="EZEE SHOP\IMAGES\Testimony3.png">
+                <img src="IMAGES\Testimony3.png">
                 <h3>Raiden </h3>
             </div>
         </div>
@@ -327,19 +327,19 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-5">
-                    <img src="EZEE SHOP\IMAGES\brand1.jpg" width="170" height="80">
+                    <img src="IMAGES\brand1.jpg" width="170" height="80">
                 </div>
                 <div class="col-5">
-                    <img src="EZEE SHOP\IMAGES\brand2.jpg" width="200" height="110">
+                    <img src="IMAGES\brand2.jpg" width="200" height="110">
                 </div>
                 <div class="col-5">
-                    <img src="EZEE SHOP\IMAGES\brand3.jpg" width="170" height="60">
+                    <img src="IMAGES\brand3.jpg" width="170" height="60">
                 </div>
                 <div class="col-5">
-                    <img src="EZEE SHOP\IMAGES\brand4.png" width="180" height="150">
+                    <img src="IMAGES\brand4.png" width="180" height="150">
                 </div>
                 <div class="col-5">
-                    <img src="EZEE SHOP\IMAGES\brand5.png" width="160" height="80">
+                    <img src="IMAGES\brand5.png" width="160" height="80">
                 </div>
             </div>
         </div>
@@ -356,24 +356,24 @@
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
                     <a href="https://play.google.com/store/games?hl=en&gl=US" target="_blank">
-                        <img src="EZEE SHOP\IMAGES\google-play.jpg">
+                        <img src="IMAGES\google-play.jpg">
                     </a>
                     <a href="https://www.apple.com/in/app-store/" target="_blank">
-                        <img src="EZEE SHOP\IMAGES\app store.jpg">
+                        <img src="IMAGES\app store.jpg">
                     </a>
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="EZEE SHOP\IMAGES\footer logo.png">
+                    <img src="IMAGES\footer logo.png">
                     <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Everything Accessible to the Many. </p>
                 </div>
                 <div class="footer-col-3">
                     <h3>Usefull Links</h3>
                     <ul>
-                        <li><a href="EZEE SHOP\index.html" target="_blank">Coupons</a></li>
-                        <li><a href="EZEE SHOP\index.html" target="_blank">Blog Post</a></li>
-                        <li><a href="EZEE SHOP\index.html" target="_blank">Return Policy</a></li>
-                        <li><a href="EZEE SHOP\index.html" target="_blank">Join Affiliate</a></li>
+                        <li><a href="index.html" target="_blank">Coupons</a></li>
+                        <li><a href="index.html" target="_blank">Blog Post</a></li>
+                        <li><a href="index.html" target="_blank">Return Policy</a></li>
+                        <li><a href="index.html" target="_blank">Join Affiliate</a></li>
                     </ul>
                 </div>
                 <div class="footer-col-4">
