--- a/Products.html
+++ b/Products.html
@@ -17,19 +17,19 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\logo all product.png" width="125px">
+                <img src="IMAGES\logo all product.png" width="125px">
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\index.html" target="_blank">Home</a></li>
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\Products.html" target="_blank">Product</a></li>
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\about_us.html" target="_blank">About Us</a></li>
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\contact.html" target="_blank">Contact</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
+                    <li><a href="Products.html" target="_blank">Product</a></li>
+                    <li><a href="about_us.html" target="_blank">About Us</a></li>
+                    <li><a href="contact.html" target="_blank">Contact</a></li>
                     <li><a href="#">Account</a></li>
                 </ul>
             </nav>
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\shopping-cart-svg-png-icon-download-28.png" width="25px" height="25px">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\menu icon.png" width="25px" height="25px" class="menu-icon" 
+            <img src="IMAGES\shopping-cart-svg-png-icon-download-28.png" width="25px" height="25px">
+            <img src="IMAGES\menu icon.png" width="25px" height="25px" class="menu-icon" 
             onclick="menutoggle()">
         </div>
         
@@ -47,7 +47,7 @@
     </div>
     <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Fashion\Peter England blazer2.jpg">
+            <img src="IMAGES\Fashion\Peter England blazer2.jpg">
             <h4>Louis Philippe<br>
                 Men Blue Solid Slim-Fit Formal Blazer</h4>
                 <div class="rating">
@@ -60,7 +60,7 @@
                 <p>MRP ₹6999</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Fashion\Blend Banarasi Saree.jpg">
+            <img src="IMAGES\Fashion\Blend Banarasi Saree.jpg">
             <h4>KALINI<br>
                 Maroon & Gold Zari Silk Blend Banarasi Saree</h4>
                 <div class="rating">
@@ -73,7 +73,7 @@
                 <p>MRP ₹2099</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Fashion\adidas sport shoes men1.jpg" height="390">
+            <img src="IMAGES\Fashion\adidas sport shoes men1.jpg" height="390">
             <h4>ADIDAS <br>
                 Quickflow M Running Shoes For Men  (Blue)</h4>
                 <div class="rating">
@@ -87,7 +87,7 @@
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Electronics\Apple-iPhone-1.jpg" height="390">
+            <img src="IMAGES\Electronics\Apple-iPhone-1.jpg" height="390">
             <h4>APPLE <br>
                 iPhone 14 Pro Max (Deep Purple, 512 GB)</h4>
                 <div class="rating">
@@ -100,7 +100,7 @@
                 <p>MRP ₹1,69,900</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Featured Products\Featured Products1.jpg" height="380" width="300">
+            <img src="IMAGES\Featured Products\Featured Products1.jpg" height="380" width="300">
             <h4>Inddus<br>
                 Women Wine Solid Georgette Saree with Blouse Piece</h4>
                 <div class="rating">
@@ -113,7 +113,7 @@
                 <p>MRP ₹1499</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Featured Products\Featured Products6.jpg" height="330">
+            <img src="IMAGES\Featured Products\Featured Products6.jpg" height="330">
             <h4>Wood Craft<br>
                  India Armaan Decorative Intersecting Wall Shelf Set OF 4 -White.</h4>
                 <div class="rating">
@@ -127,7 +127,7 @@
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Featured Products\Featured Products5.jpg" height="330">
+            <img src="IMAGES\Featured Products\Featured Products5.jpg" height="330">
             <h4>
             PUMA<br> 
             Firefly Walking Shoes For Men  (Black)
@@ -145,7 +145,7 @@
     </div>
     <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Featured Products\Featured Products4.jpg" height="380" width="300">
+            <img src="IMAGES\Featured Products\Featured Products4.jpg" height="380" width="300">
             <h4>Varanga<br>
                 Women Mustard Yellow Anarkali Kurta With DupattaLouis</h4>
                 <div class="rating">
@@ -158,7 +158,7 @@
                 <p>MRP ₹2049</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Featured Products\Featured Products2.jpg" height="340">
+            <img src="IMAGES\Featured Products\Featured Products2.jpg" height="340">
             <h4>Fastrack <br>
                 NG3120SL01C Bare Basic Analog Watch - For Men</h4>
                 <div class="rating">
@@ -171,7 +171,7 @@
                 <p>MRP ₹2049</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Featured Products\Featured Products3.jpg" height="340">
+            <img src="IMAGES\Featured Products\Featured Products3.jpg" height="340">
             <h4>Mivi <br>
                 Play 5 W Portable Bluetooth Speaker  (Black, Mono Channel)</h4>
                 <div class="rating">
@@ -185,7 +185,7 @@
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Featured Products\Featured Products7.jpg" height="340">
+            <img src="IMAGES\Featured Products\Featured Products7.jpg" height="340">
             <h4>DIZO <br>
                 Watch R AMOLED with 45 mm Dial Size (by realme techLife)</h4>
                 <div class="rating">
@@ -216,12 +216,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\google-play.jpg">
-                        <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\app store.jpg">
+                        <img src="IMAGES\google-play.jpg">
+                        <img src="IMAGES\app store.jpg">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\footer logo.png">
+                    <img src="IMAGES\footer logo.png">
                     <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Everything Accessible to the Many. </p>
                 </div>
                 <div class="footer-col-3">
