--- a/about_us.html
+++ b/about_us.html
@@ -33,19 +33,19 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\logo all product.png" width="125px">
+                <img src="IMAGES\logo all product.png" width="125px">
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\index.html" target="_blank">Home</a></li>
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\Products.html" target="_blank">Product</a></li>
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\about_us.html" target="_blank">About Us</a></li>
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\contact.html" target="_blank">Contact</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
+                    <li><a href="Products.html" target="_blank">Product</a></li>
+                    <li><a href="about_us.html" target="_blank">About Us</a></li>
+                    <li><a href="contact.html" target="_blank">Contact</a></li>
                     <li><a href="#">Account</a></li>
                 </ul>
             </nav>
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\shopping-cart-svg-png-icon-download-28.png" width="25px" height="25px">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\menu icon.png" width="25px" height="25px" class="menu-icon" 
+            <img src="IMAGES\shopping-cart-svg-png-icon-download-28.png" width="25px" height="25px">
+            <img src="IMAGES\menu icon.png" width="25px" height="25px" class="menu-icon" 
             onclick="menutoggle()">
         </div>
         
@@ -67,12 +67,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\google-play.jpg">
-                        <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\app store.jpg">
+                        <img src="IMAGES\google-play.jpg">
+                        <img src="IMAGES\app store.jpg">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\footer logo.png">
+                    <img src="IMAGES\footer logo.png">
                     <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Everything Accessible to the Many. </p>
                 </div>
                 <div class="footer-col-3">
