--- a/product_details.html
+++ b/product_details.html
@@ -16,19 +16,19 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\logo all product.png" width="125px">
+                <img src="IMAGES\logo all product.png" width="125px">
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\index.html" target="_blank">Home</a></li>
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\Products.html" target="_blank">Product</a></li>
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\about_us.html" target="_blank">About Us</a></li>
-                    <li><a href="C:\Users\Amardeep\Desktop\EZEE SHOP\contact.html" target="_blank">Contact</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
+                    <li><a href="Products.html" target="_blank">Product</a></li>
+                    <li><a href="about_us.html" target="_blank">About Us</a></li>
+                    <li><a href="contact.html" target="_blank">Contact</a></li>
                     <li><a href="#">Account</a></li>
                 </ul>
             </nav>
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\shopping-cart-svg-png-icon-download-28.png" width="25px" height="25px">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\menu icon.png" width="25px" height="25px" class="menu-icon" 
+            <img src="IMAGES\shopping-cart-svg-png-icon-download-28.png" width="25px" height="25px">
+            <img src="IMAGES\menu icon.png" width="25px" height="25px" class="menu-icon" 
             onclick="menutoggle()">
         </div>
         
@@ -38,16 +38,16 @@
 <div class="small-container single-products">
     <div class="row">
 <div class="col-2">
-    <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Fashion\Peter England blazer2.jpg" width="100%" id="ProductImg">
+    <img src="IMAGES\Fashion\Peter England blazer2.jpg" width="100%" id="ProductImg">
     <div class="small-img-row">
     <div class="small-img-col">
-    <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Fashion\Peter England blazer.jpg" width="100%" class="small-img">
+    <img src="IMAGES\Fashion\Peter England blazer.jpg" width="100%" class="small-img">
     </div>
     <div class="small-img-col">
-    <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Fashion\Peter England blazer3.png" width="100%" class="small-img">
+    <img src="IMAGES\Fashion\Peter England blazer3.png" width="100%" class="small-img">
     </div>
     <div class="small-img-col">
-    <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Fashion\Peter England blazer1.jpg" width="100%" class="small-img">
+    <img src="IMAGES\Fashion\Peter England blazer1.jpg" width="100%" class="small-img">
     </div>
     </div>
     </div>
@@ -84,7 +84,7 @@
 <div class="small-container">
     <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Fashion\PETER ENGLAND shirt.jpg" height="380" width="300">
+            <img src="IMAGES\Fashion\PETER ENGLAND shirt.jpg" height="380" width="300">
             <h4>Louis Philippe<br>
                 Men Blue Solid Slim-Fit Formal Shirt</h4>
                 <div class="rating">
@@ -97,7 +97,7 @@
                 <p>MRP ₹699</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Fashion\Blend Banarasi Saree.jpg">
+            <img src="IMAGES\Fashion\Blend Banarasi Saree.jpg">
             <h4>KALINI<br>
                 Maroon & Gold Zari Silk Blend Banarasi Saree</h4>
                 <div class="rating">
@@ -111,7 +111,7 @@
         </div>
         
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Featured Products\Featured Products1.jpg" height="380" width="300">
+            <img src="IMAGES\Featured Products\Featured Products1.jpg" height="380" width="300">
             <h4>Inddus<br>
                 Women Wine Solid Georgette Saree with Blouse Piece</h4>
                 <div class="rating">
@@ -124,7 +124,7 @@
                 <p>MRP ₹1499</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\Featured Products\Featured Products4.jpg" height="380" width="300">
+            <img src="IMAGES\Featured Products\Featured Products4.jpg" height="380" width="300">
             <h4>Varanga<br>
                 Women Mustard Yellow Anarkali Kurta With DupattaLouis</h4>
                 <div class="rating">
@@ -148,12 +148,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\google-play.jpg">
-                        <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\app store.jpg">
+                        <img src="IMAGES\google-play.jpg">
+                        <img src="IMAGES\app store.jpg">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="C:\Users\Amardeep\Desktop\EZEE SHOP\IMAGES\footer logo.png">
+                    <img src="IMAGES\footer logo.png">
                     <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Everything Accessible to the Many. </p>
                 </div>
                 <div class="footer-col-3">
